--- a/practica 3/maquetado1/index.html
+++ b/practica 3/maquetado1/index.html
@@ -22,7 +22,10 @@
     </fieldset>
     <fieldset class="chambas">
         <legend>Experiencia Laboral</legend>
+        <ul>
         <li>2022-2023: "La Principal", Circuito Colonias entre calle 44 Y avenida 1ro de Mayo, Santa Rosa, Empleado General</li>
+        <li>2023-2024 "Impuls", colonia Garcia Gineres, Aux de piso de ventas</li>
+    </ul> 
     </fieldset>
     <fieldset class="escuelas">
         <legend>Educación Y Formación</legend>
